# liboodle

./: CMakeLists.txt  README.md
demo/: Buffer.h  Format.h  Granny.cpp  Granny.h  demo.cpp
include/oodle/: Oodle1.h
src/: CMakeLists.txt  Oodle1.cpp
